<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>com.microservice</groupId>
	<artifactId>microservice-new</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>microservice-new</name>
	<description>new microservice</description>
	<packaging>pom</packaging>
	<modules>
		<module>product-service</module>
		<module>customer-service</module>
		<module>order-service</module>
		<module>payment-service</module>
		<module>auth-service</module>
		<module>apiGateway</module>
	</modules>

	<properties>
		<maven-compiler-source>17</maven-compiler-source>
		<maven-compiler-target>17</maven-compiler-target>
		<java.version>17</java.version>
		<spring-cloud.version>2024.0.1</spring-cloud.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-validation</artifactId>
				<version>3.2.5</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>